--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
@@ -60,6 +63,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.2.5",
     "babel-plugin-named-exports-order": "^0.0.2",
     "playroom": "^0.28.0",
     "prop-types": "^15.8.1",
